fixed books and genres layouts on mobile

--- a/app/src/components/BooksList/BooksList.css
+++ b/app/src/components/BooksList/BooksList.css
@@ -8,6 +8,7 @@
     flex: 1 1 250px;
     margin: 10px;
     min-height: 200px;
+    max-width: 505px;
 }
 
 .bookList__item__header {
